--- a/css/kinto.css
+++ b/css/kinto.css
@@ -24,6 +24,8 @@ body {
     color: #333;
     font-family: 'Noto Sans KR';
     font-weight: 300;
+
+    min-width: 1920px;
 }
 h3 {
     font-size: 30px;
